fixed up flickering

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ footer {
   50%  { opacity: 1;  }
   100% { transform:translate(0,10px) rotate(45deg); opacity: 0; }
 }
-/*
+
 @keyframes flicker2 {
     
   0%, 17%, 23%, 25%, 53%, 58%, 100% {
@@ -135,14 +135,14 @@ footer {
       opacity: .2;
   }    
 }
-*/
 
+/*
 @keyframes flicker2 {
   0% {
     opacity: 1;
   }
 }
-
+*/
 /*
 @keyframes flicker {
 	40% {
@@ -249,7 +249,7 @@ footer {
   font-size: 2rem;
   font-family: 'Roboto Flex', sans-serif;
   text-align: center;
-  margin: .1rem 1rem .1rem 1rem;
+  margin: .1rem 2rem .1rem 2rem;
 }
 
 .sides {
@@ -349,7 +349,7 @@ footer {
 }
 
 .refereeSub {
-  margin-left: 2.1rem;
+  margin-left: .5rem;
   margin-bottom: .5rem;
   font-size: 1rem;
   color: #555;
